# rootengine-renderpipeline

./: About.md  CMakeLists.txt  Renderpipeline_About.md  render_main.cpp  v_shader.vertshader
Camera/: Camera.c
Camera/include/: Camera.h
RenderCache/: render_cache.c
RenderCache/include/: render_cache.h
RenderObj/: render_object.c
RenderObj/include/: render_object.h
assets/: cv22_rig01_export06.fbx  cv22_rig01_export07.fbx  cv22_rig01_export08.fbx
assets/shaders/: diffuse_texture.fragshader  v_shader.vertshader  vert_color.fragshader  vert_color.vertshader
include/: Camera.h  Camera.hpp  render_cache.h  render_cache.hpp  render_object.h  render_object.hpp
include/math/: matrix_math.h
include/roots_math/: roots_math.h
shaders/: f_shader.fragshader  v_shader.vertshader
src/: Camera.c  Camera.cpp  render_cache.c  render_cache.cpp  render_object.c  render_object.cpp
src/roots_math/: roots_math.c
